[tool.poetry]
name = "knuckles"
version = "0.1.0"
description = "A simple library to manage the Subsonic API"
authors = ["kutu-dev"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
types-requests = "^2.31.0.1"
types-python-dateutil = "^2.8.19.14"
responses = "^0.23.1"
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "attr-defined, union-attr"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = "tests"
