[project]
name = "knuckles"
requires-python = ">=3.11.0"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2"
]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pip-tools>=7.4.1",
    "ruff>=0.1.2",
    "mypy>=1.4.1",
    "types-requests>=2.31.0.1",
    "types-python-dateutil>=2.8.19.14",
    "pre-commit>=3.7.0",
    "pip-tools>=7.4.1"
]
tests = [
    "pytest>=7.4.0",
    "responses>=0.23.1",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.18",
    "mkdocstrings[python]>=0.24.3",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.8.0",
    "mkdocs-literate-nav>=0.6.1"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.ruff.lint]
select = ["E", "F", "I001"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "attr-defined, union-attr"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = "tests"
